<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="senal.com.buenosuerte.SecondActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/num_picks_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/minValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_value"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/numPicks"
        android:layout_alignStart="@+id/numPicks" />

    <TextView
        android:id="@+id/maxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/minValue"
        android:layout_alignStart="@+id/minValue"
        android:text="@string/max_value"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/numPicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_picks_value"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="26dp"
        android:text="@string/max_label"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="18dp"
        android:text="@string/min_label"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>
